fixed child overflow on tradeupcalculator, and rarity bug

--- a/frontend/src/styles/TradeupCalculator.css
+++ b/frontend/src/styles/TradeupCalculator.css
@@ -1,5 +1,7 @@
 .main {
 height: 100vh;
+overflow-y: auto; /* Adds a scrollbar if content overflows */
+background-color: #000000;
 }
 
 .tradeup-calculator {
@@ -7,7 +9,7 @@ padding-top: 50px;
 background-color: #000000;
 display: flex;
 flex-direction: column;
-height:100%;
+height:100vh;
 }
 
 .stattrak-rarity-container {
